fix navbar margin on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -709,6 +709,7 @@ a:hover {
 
     .navbar .links {
         margin: 0px;
+        margin-top: 5px;
     }
 
     .pricing-table table {
